Fri Aug 23 21:00:55 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (timetick_int_t): Renamed from timetick_giga_count_t.
	  (gcd_timtick_int): Renamed from gcd_ul and make the arguments
	  timetick_giga_count_t.
	  (reduce_fraction): Make the arguments timetick_int_t.
	  (timetick2integer): Ditto.
	  (make_clock_result): Ditto.
	  (timetick2dblnum): Fix the return type.
	  (rb_clock_gettime): Use timetick_int_t.

Fri Aug 23 20:50:40 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (gcd_ul): New function.
	  (reduce_fraction): Ditto.
	  (reduce_fraction): Ditto.
	  (timetick2dblnum): Ditto.
	  (timetick2integer): Ditto.
	  (make_clock_result): Use timetick2dblnum and timetick2integer.
	  (rb_clock_gettime): Follow the make_clock_result change.

Fri Aug 23 18:39:04 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c (ary_make_shared): shared ary as shady. Need more effort to
	  make it normal object.

	* array.c (rb_ary_modify): use RARRAY_PTR_USE() without WB because
	  there are not new relations.

	* array.c (ary_ensure_room_for_unshift): use RARRAY_RAWPTR() because
	  there are not new relations.

Fri Aug 23 11:25:57 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c: introduce ARY_SHARED_OCCUPIED(shared).

Fri Aug 23 11:07:08 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub (config.h): now SIZEOF_CLOCK_T is needed for
	  unsigned_clock_t.

Thu Aug 22 22:01:04 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (rb_clock_gettime): Strip "s" from unit names.

Thu Aug 22 20:14:59 2013  Tanaka Akira  <akr@fsij.org>

	* process.c (unsigned_clock_t): Defined.
	  (rb_clock_gettime): Consider clock_t overflow for
	  ISO_C_CLOCK_BASED_CLOCK_PROCESS_CPUTIME_ID.

	* configure.in: Check the size of clock_t.

Thu Aug 22 16:22:48 2013  Koichi Sasada  <ko1@atdot.net>

	* compile.c (build_postexe_iseq): fix to setup the local table.

Thu Aug 22 15:42:43 2013  Koichi Sasada  <ko1@atdot.net>

	* compile.c (rb_iseq_compile_node): accept NODE_IFUNC to support